2019-06-26 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Do not use autorelease

2019-06-19 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
        Fix autorelease issues inside the loop with Query Locator.
        
        * DBSoap+Selecting.m
        Clean up memory management of GWSService a little.

2019-06-18 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
        Correctly initialize create and update services.

2019-06-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap+Updating.m
	* DBSoap+Selecting.m
	* DBSoapCSV.m
	* DBSoap+Deleting.m
	* DBSoap+Creating.m
	* DBSoap.h
	* DBSoap.m
	Instantiate GWSService each time it is needed, do not keep it persistent as an ivar.

2019-06-02 Riccardo Mottola <rm@gnu.org>

	* DBRest.h
	* DBRest.m
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.m
	Store serviceURL as NSURL and not as a string anymore.

2019-06-02 Riccardo Mottola <rm@gnu.org>

	* DBRest.h
	* DBRest.m
	First steps in REST API query support.

2019-05-28 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Remove unused set.

2018-07-23  Riccardo Mottola <rm@gnu.org>

	* DBSoap+Deleting.m
	Fix cycle exit condition!

	* DBSoap+Updating.m
	wrap result in a dictionary, to ease FileReader output.

2018-07-19  Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	* DBSoap+Deleting.m
	Undelete API.

2018-07-19  Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	* DBSoap+Updating.m
	implement getUpdated API.

2018-07-18  Riccardo Mottola <rm@gnu.org>

	* DBSoap+Deleting.m
	Fix memory error

2018-07-17  Riccardo Mottola <rm@gnu.org>

	* DBSoap+Deleting.m
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	implement getDeleted API

2018-05-08  Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Fix: use cloned connection for query execution.

2018-05-04  Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.h
	* DBSoapCSV.m
	* DBSoap.h
	* DBSoap.m
	* DBSoap+Selecting.m
	Implement retrieve call.

2018-04-23  Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Use login.salesforce.com as endpoint.
